[FINNA-1448] Fix whitespace in MARC staff view control fields.

--- a/themes/finna2/less/finna/record.less
+++ b/themes/finna2/less/finna/record.less
@@ -724,6 +724,14 @@ a.authority {
   }
 }
 
+.marc-row-LEADER,
+.marc-row-005,
+.marc-row-006,
+.marc-row-007,
+.marc-row-008 {
+  white-space: pre-wrap;
+}
+
 .nav-pills {
   padding: 0px;
   margin: 0px;
